Scrap out layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,9 +2,22 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width">
+
   <title>Sam Mason x Developer</title>
+  <meta name="description" content="I'm Sam Mason a London based developer, and this is my collection of stories &amp; posts.">
+
+  <link rel="stylesheet" type="text/css" href="//cloud.typography.com/6776652/769702/css/fonts.css" />
+  <link rel="stylesheet" href="/assets/css/main.css">
 </head>
 <body>
+  <header>
+    <h1>Sam Mason</h1>
+  </header>
+
+  <footer>
+
+  </footer>
 
 </body>
 </html>
