--- a/assets/css/_layout.scss
+++ b/assets/css/_layout.scss
@@ -2,4 +2,50 @@ body {
   font-family: 'Sentinel SSm A', 'Sentinel SSm B';
   font-weight: 400;
   font-style: normal;
+  color: #353b3c;
+  padding: $border-thickness;
+  font-size: 16px;
+  line-height: 1.4;
+}
+
+.container {
+  @include outer-container;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+  transition: color 0.4s;
+  &:hover {
+    color: #ec6060;
+  }
+}
+
+header {
+  font-family: 'Verlag A', 'Verlag B';
+  font-weight: 700;
+  font-style: normal;
+  text-transform: uppercase;
+  margin-top: 24px;
+  line-height: 54px;
+  margin-bottom: 36px;
+  h1 {
+    font-size: 42px;
+    letter-spacing: 2px;
+    @include span-columns(6);
+  }
+
+  nav {
+    @include span-columns(6);
+    text-align: right;
+    a {
+      margin-left: 12px;
+    }
+  }
+}
+
+footer {
+  margin: 24px 0;
+  font-size: 12px;
+}
 }
