--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
   </section>
 
   <footer class="container">
-    <small>Made in London with <img src="" alt=""> by Sam Mason  </small>
+    <small>Made in London with <img class="heart-icon" src="/assets/img/heart.png" alt="heart icon"> by Sam Mason</small>
   </footer>
 
 </body>
