Update time styles

--- a/assets/css/_layout.scss
+++ b/assets/css/_layout.scss
@@ -63,9 +63,10 @@ h2 {
 }
 
 time {
-  font-size: 18px;
+  display: block;
   font-style: italic;
   color: #bcc3c4;
+  margin-bottom: 5px;
 }
 
 .posts {
