--- a/assets/css/_layout.scss
+++ b/assets/css/_layout.scss
@@ -3,8 +3,8 @@ body {
   font-weight: 400;
   font-style: normal;
   color: #353b3c;
-  margin: #{$border-thickness * 2};
-  margin-left: #{($border-thickness * 2) + $border-thickness};
+  padding: #{$border-thickness * 2};
+  padding-left: #{($border-thickness * 2) + $border-thickness};
   font-size: 18px;
   line-height: 1.5;
 }
@@ -18,7 +18,7 @@ a {
   text-decoration: none;
   transition: color 0.4s;
   &:hover {
-    color: inherit;
+    color: #353b3c;
   }
 }
 
@@ -34,10 +34,16 @@ header {
   padding-top: 27px;
   line-height: 40px;
   margin-bottom: 40px;
+  a:hover {
+    color: #ec6060;
+  }
   h1 {
     font-size: 27px;
     letter-spacing: 2px;
     @include span-columns(6);
+    a {
+      color: inherit;
+    }
   }
 
   nav {
@@ -46,9 +52,6 @@ header {
     a {
       margin-left: 12px;
       color: inherit;
-      &:hover {
-        color: #ec6060;
-      }
     }
   }
 }
@@ -56,8 +59,10 @@ header {
 footer {
   margin: 27px 0;
   font-size: 12px;
+  text-align: center;
   .heart-icon {
     width: 1em;
+    margin: 0 .2em;
   }
 }
 
@@ -79,13 +84,13 @@ h2 {
 time {
   display: block;
   font-style: italic;
-  color: #bcc3c4;
+  color: #d5dad8;
   margin-bottom: 5px;
 }
 
 .posts {
   li {
-    margin-bottom: 36px;
+    margin-bottom: 60px;
   }
 }
 
@@ -93,4 +98,12 @@ article {
   h2 {
     text-align: center;
   }
+  time {
+    text-align: center;
+    margin-bottom: 27px;
+  }
+}
+
+.separator {
+  display: inline-block;
 }
