Add some media queryness

--- a/assets/css/_vars.scss
+++ b/assets/css/_vars.scss
@@ -1,2 +1,6 @@
 $max-width: 720px;
 $border-thickness: 12px;
+$primary-color: #353b3c;
+$secondary-color: #ec6060;
+$omega-color: #e7eae9;
+$large: new-breakpoint(max-width 650px);
