--- a/assets/css/_borders.scss
+++ b/assets/css/_borders.scss
@@ -1,37 +1,50 @@
 html:before,html:after,body:before,body:after{
-    content:"";
-    background: #f0f2f1;
-    position:fixed;
-    display:block;
-    z-index:10;
+  content:"";
+  background: $omega-color;
+  position:fixed;
+  display:block;
+  z-index:10;
 }
 
 html:before{
-    height: $border-thickness;
-    left:0;
-    right:0;
-    top:0;
+  height: $border-thickness;
+  left:0;
+  right:0;
+  top:0;
+  @include media($large) {
+    height: #{$border-thickness / 2};
+  }
 }
 
 html:after{
-    width: $border-thickness;
-    top:0;
-    right:0;
-    bottom:0;
+  width: $border-thickness;
+  top:0;
+  right:0;
+  bottom:0;
+  @include media($large) {
+    width: #{$border-thickness / 2};
+  }
 }
 
 body:before{
-    height: $border-thickness;
-    right:0;
-    bottom:0;
-    left:0;
+  height: $border-thickness;
+  right:0;
+  bottom:0;
+  left:0;
+  @include media($large) {
+    height: #{$border-thickness / 2};
+  }
 }
 
 body:after{
-    width: $border-thickness;
-    top:0;
-    bottom:0;
-    left:0;
-    z-index: 5;
-    border-right: $border-thickness solid #ec6060;
+  width: $border-thickness;
+  top:0;
+  bottom:0;
+  left:0;
+  z-index: 5;
+  border-right: $border-thickness solid #ec6060;
+  @include media($large) {
+    width: #{$border-thickness / 2};
+    border-right: #{$border-thickness / 2} solid $secondary-color;
+  }
 }
