--- a/assets/css/_layout.scss
+++ b/assets/css/_layout.scss
@@ -2,11 +2,17 @@ body {
   font-family: 'Sentinel SSm A', 'Sentinel SSm B';
   font-weight: 400;
   font-style: normal;
-  color: #353b3c;
-  padding: #{$border-thickness * 2};
-  padding-left: #{($border-thickness * 2) + $border-thickness};
+  background: #ffffff;
+  color: $primary-color;
   font-size: 18px;
   line-height: 1.5;
+  padding: #{$border-thickness * 2};
+  padding-left: #{($border-thickness * 2) + $border-thickness};
+
+  @include media($large) {
+    padding: #{($border-thickness * 2) / 2};
+    padding-left: #{(($border-thickness * 2) + $border-thickness) / 2};
+  }
 }
 
 .container {
@@ -14,11 +20,11 @@ body {
 }
 
 a {
-  color: #ec6060;
+  color: $secondary-color;
   text-decoration: none;
   transition: color 0.4s;
   &:hover {
-    color: #353b3c;
+    color: $primary-color;
   }
 }
 
@@ -44,6 +50,10 @@ header {
     a {
       color: inherit;
     }
+    @include media($large) {
+      @include span-columns(12);
+      text-align: center;
+    }
   }
 
   nav {
@@ -52,6 +62,13 @@ header {
     a {
       margin-left: 12px;
       color: inherit;
+      &:first-child {
+        margin-left: 0;
+      }
+    }
+    @include media($large) {
+      @include span-columns(12);
+      text-align: center;
     }
   }
 }
@@ -68,15 +85,15 @@ footer {
 
 h2 {
   font-family: 'Verlag A', 'Verlag B';
-  font-weight: 300;
+  font-weight: 700;
   font-style: normal;
   font-size: 27px;
   text-transform: uppercase;
   margin-bottom: 8px;
   a {
-    color: #ec6060;
+    color: $secondary-color;
     &:hover {
-      color: #353b3c;
+      color: $primary-color;
     }
   }
 }
@@ -104,6 +121,15 @@ article {
   }
 }
 
-.separator {
-  display: inline-block;
+.pagination {
+  font-family: 'Verlag A', 'Verlag B';
+  font-weight: 700;
+  text-transform: uppercase;
+  span {
+    color: #d5dad8;
+  }
+  .separator {
+    padding: 0 8px;
+  }
 }
+
