--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,5 +27,16 @@
     <small>Made in London with <img class="heart-icon" src="/assets/img/heart.png" alt="heart icon"> by Sam Mason</small>
   </footer>
 
+  {% if site.production %}
+    <script>
+      !function(g,s,q,r,d){r=g[r]=g[r]||function(){(r.q=r.q||[]).push(
+      arguments)};d=s.createElement(q);q=s.getElementsByTagName(q)[0];
+      d.src='//d1l6p2sc9645hc.cloudfront.net/tracker.js';q.parentNode.
+      insertBefore(d,q)}(window,document,'script','_gs');
+
+      _gs('GSN-564854-X');
+    </script>
+  {% endif %}
+
 </body>
 </html>
