Add class to single posts

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<article>
+<article class="single-post">
   <h2>{{ page.title }}</h2>
   <time datetime="{{ page.date }}">{{ page.date | date_to_long_string }}</time>
 
