--- a/assets/css/_layout.scss
+++ b/assets/css/_layout.scss
@@ -37,9 +37,11 @@ header {
   font-weight: 700;
   font-style: normal;
   text-transform: uppercase;
-  padding-top: 27px;
+  padding-top: 12px;
   line-height: 40px;
-  margin-bottom: 40px;
+  padding-bottom: 12px;
+  margin-bottom: 60px;
+  border-bottom: 2px solid #e7eae9;
   a:hover {
     color: #ec6060;
   }
@@ -74,7 +76,7 @@ header {
 }
 
 footer {
-  margin: 27px 0;
+  margin: 40px 0 27px;
   font-size: 12px;
   text-align: center;
   .heart-icon {
@@ -89,7 +91,7 @@ h2 {
   font-style: normal;
   font-size: 27px;
   text-transform: uppercase;
-  margin-bottom: 8px;
+
   a {
     color: $secondary-color;
     &:hover {
@@ -102,10 +104,12 @@ time {
   display: block;
   font-style: italic;
   color: #d5dad8;
-  margin-bottom: 5px;
+  margin-bottom: 12px;
 }
 
 .posts {
+  list-style: none;
+  padding: 0;
   li {
     margin-bottom: 60px;
   }
@@ -119,6 +123,9 @@ article {
     text-align: center;
     margin-bottom: 27px;
   }
+  a {
+    font-weight: 700;
+  }
 }
 
 .pagination {
@@ -130,6 +137,38 @@ article {
   }
   .separator {
     padding: 0 8px;
+  }
+}
+
+ul, ol {
+  padding-left: 36px;
+  li {
+    margin-bottom: 8px;
+  }
+}
+
+
+ul {
+  list-style-type: disc;
+}
+
+ol {
+  list-style-type: decimal;
+}
+
+blockquote {
+  font-family: 'Verlag A', 'Verlag B';
+  font-size: 24px;
+  border-left: 2px solid $secondary-color;
+  padding-left: 24px;
+  margin-bottom: 24px;
+  p {
+    margin-bottom: 0;
+  }
+  cite {
+    display: block;
+
+    font-size: 12px;
   }
 }
 
