--- a/assets/css/_layout.scss
+++ b/assets/css/_layout.scss
@@ -7,11 +7,12 @@ body {
   font-size: 18px;
   line-height: 1.5;
   padding: #{$border-thickness * 2};
-  padding-left: #{($border-thickness * 2) + $border-thickness};
+  padding-left: #{$border-thickness * 3};
 
   @include media($large) {
-    padding: #{($border-thickness * 2) / 2};
-    padding-left: #{(($border-thickness * 2) + $border-thickness) / 2};
+    font-size: 16px;
+    padding: 14px;
+    padding-left: 18px;
   }
 }
 
@@ -30,6 +31,9 @@ a {
 
 p {
   margin-bottom: 27px;
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
 
 header {
@@ -62,7 +66,7 @@ header {
     @include span-columns(6);
     text-align: right;
     a {
-      margin-left: 12px;
+      margin-left: 24px;
       color: inherit;
       &:first-child {
         margin-left: 0;
@@ -156,20 +160,76 @@ ol {
   list-style-type: decimal;
 }
 
+img {
+  max-width: 100%;
+}
+
 blockquote {
   font-family: 'Verlag A', 'Verlag B';
   font-size: 24px;
-  border-left: 2px solid $secondary-color;
-  padding-left: 24px;
+  border-left: 2px solid $omega-color;
   margin-bottom: 24px;
+  padding: 5px 0 5px 24px;
   p {
     margin-bottom: 0;
+    line-height: 1.2;
   }
   cite {
     display: block;
-
+    margin-top: 5px;
     font-size: 12px;
   }
+}
+
+.about-meta {
+ text-align: center;
+}
+.me {
+  margin-bottom: 24px;
+}
+
+.projects {
+  margin-top: 24px;
+  overflow: auto;
+  padding-left: 0;
+}
+
+.project {
+  @include span-columns(6);
+  @include omega(2n);
+  border-left-style: solid;
+  border-left-width: 6px;
+  margin-bottom: 0;
+  min-height: 135px;
+  @include media($large) {
+    @include span-columns(12);
+    margin-right: 0;
+  }
+
+  a {
+    color: $primary-color;
+    display: block;
+    font-weight: 400;
+    padding: 24px 0 24px 12px;
+  }
+  &.pine-for {
+    border-color: #50a9d1;
+  }
+  &.psdfonts {
+    border-color: #F42F65;
+  }
+  &.super-servers {
+    border-color: #2969B0;
+  }
+}
+
+
+
+
+h3 {
+  font-family: 'Verlag A', 'Verlag B';
+  font-weight: 700;
+  text-transform: uppercase;
 }
 
 @include keyframes(colourFade) {
