Add favicon link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
+  <link rel="icon" href="/assets/img/favicon.ico">
 
   <title>Sam Mason x {% if page.title %} {{page.title}} {% else %}Developer {% endif %} </title>
   <meta name="description" content="I'm Sam Mason a London based developer, and this is my collection of stories &amp; posts.">
