--- a/assets/css/_layout.scss
+++ b/assets/css/_layout.scss
@@ -146,6 +146,7 @@ article {
 
 ul, ol {
   padding-left: 36px;
+  margin-bottom: 27px;
   li {
     margin-bottom: 8px;
   }
@@ -179,6 +180,14 @@ blockquote {
     margin-top: 5px;
     font-size: 12px;
   }
+}
+
+pre {
+  font-family: Consolas, monaco, monospace;
+  @include inline-block;
+  background: #e7eae9;
+  font-size: 14px;
+  padding: 0 4px;
 }
 
 .about-meta {
