--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -39,6 +39,7 @@ p {
 }
 
 header {
+  display: flex;
   font-family: 'PT Sans', sans-serif;
   font-weight: 700;
   font-style: normal;
@@ -48,25 +49,25 @@ header {
   padding-bottom: 12px;
   margin-bottom: 60px;
   border-bottom: 2px solid #e7eae9;
-  a:hover {
-    color: #ec6060;
+
+  @include media($large) {
+    display: block;
+    text-align: center;
   }
+
   h1 {
     font-size: 27px;
     letter-spacing: 2px;
-    @include span-columns(6);
+    margin: 0;
+
     a {
       color: inherit;
-    }
-    @include media($large) {
-      @include span-columns(12);
-      text-align: center;
     }
   }
 
   nav {
-    @include span-columns(6);
-    text-align: right;
+    margin-left: auto;
+
     a {
       margin-left: 24px;
       color: inherit;
@@ -74,20 +75,6 @@ header {
         margin-left: 0;
       }
     }
-    @include media($large) {
-      @include span-columns(12);
-      text-align: center;
-    }
-  }
-}
-
-footer {
-  margin: 60px 0 27px;
-  font-size: 12px;
-  text-align: center;
-  .heart-icon {
-    width: 1em;
-    margin: 0 .2em;
   }
 }
 
@@ -97,6 +84,7 @@ h2 {
   font-style: normal;
   font-size: 27px;
   text-transform: uppercase;
+  margin-top: 0;
 
   a {
     color: $secondary-color;
@@ -198,33 +186,34 @@ pre {
 .about-meta {
  text-align: center;
 }
+
 .me {
   margin-bottom: 24px;
 }
 
 .projects {
   margin-top: 24px;
-  overflow: auto;
-  padding-left: 0;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-row-gap: 20px;
+
+  @include media($large) {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
 
 .project {
-  @include span-columns(6);
-  @include omega(2n);
   border-left-style: solid;
   border-left-width: 6px;
-  margin-bottom: 0;
-  min-height: 135px;
-  @include media($large) {
-    @include span-columns(12);
-    margin-right: 0;
-  }
 
   a {
     color: $primary-color;
     display: block;
     font-weight: 400;
     padding: 24px 0 24px 12px;
+  }
+  &.punk-api {
+    border-color: #00afdb;
   }
   &.pine-for {
     border-color: #50a9d1;
