--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -71,6 +71,7 @@ header {
     a {
       margin-left: 24px;
       color: inherit;
+
       &:first-child {
         margin-left: 0;
       }
@@ -116,9 +117,6 @@ article {
   time {
     text-align: center;
     margin-bottom: 27px;
-  }
-  a {
-    font-weight: 700;
   }
 }
 
@@ -196,6 +194,7 @@ pre {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-row-gap: 20px;
+  grid-column-gap: 20px;
 
   @include media($large) {
     grid-template-columns: repeat(1, 1fr);
@@ -206,12 +205,17 @@ pre {
   border-left-style: solid;
   border-left-width: 6px;
 
+  p {
+    margin-top: 12px;
+  }
+
   a {
     color: $primary-color;
     display: block;
     font-weight: 400;
-    padding: 24px 0 24px 12px;
+    padding: 12px 0 12px 12px;
   }
+  
   &.punk-api {
     border-color: #00afdb;
   }
@@ -229,13 +233,12 @@ pre {
   }
 }
 
-
-
-
 h3 {
   font-family: 'PT Sans', sans-serif;
   font-weight: 700;
   text-transform: uppercase;
+  margin-top: 0;
+  margin-bottom: 12px;
 }
 
 @include keyframes(colourFade) {
