Use HTTPS url for fonts

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=PT+Sans:700|Droid+Serif:400,700);
+@import url(https://fonts.googleapis.com/css?family=PT+Sans:700|Droid+Serif:400,700);
 
 body {
   font-family: 'Droid Serif', serif;
@@ -215,7 +215,7 @@ pre {
     font-weight: 400;
     padding: 12px 0 12px 12px;
   }
-  
+
   &.punk-api {
     border-color: #00afdb;
   }
